shipping banner hided

--- a/sections/product-template-qbrix-poster.liquid
+++ b/sections/product-template-qbrix-poster.liquid
@@ -987,12 +987,14 @@
               </div>
               
               <div class="reputon-trustpilot-reviews-widget" id="a83b7e60-bc57-11eb-a355-a9194acb8438" style="display: flex; justify-content: center;"></div>
-              <div class="shipping-banner">
-                <div class="shipping-banner-icon"><img src="{{'shipping-icon.png' | asset_url}}" width="45" height="45"></div>
-                <div class='geotargetlygeocontent1626874543940 shipping-banner-text'>
-                <!-- Content will render here -->
-                </div>
-              </div>
+{%comment%}
+          <div class="shipping-banner">
+            <div class="shipping-banner-icon"><img src="{{'shipping-icon.png' | asset_url}}" width="45" height="45"></div>
+            <div class='geotargetlygeocontent1626874543940 shipping-banner-text'>
+            <!-- Content will render here -->
+            </div>
+          </div>
+{%endcomment%}
    
               <div class="product-single__description rte" itemprop="description">
                 {% for block in section.blocks %}
