--- a/snippets/label-product-tag.liquid
+++ b/snippets/label-product-tag.liquid
@@ -1,9 +1,15 @@
-{% for tag in products.tags  %}
-		{%- if tag == 'New' or tag == 'Bestseller' or tag == 'most-popular' or tag == 'sale' -%}
-			<div class="product__labels">
-				<span class="product__label product__label--{{ tag | replace: " ", "-"}}">{{ tag }}</span>
-				{%- if template contains 'collection' -%}{% render 'wishlisthero-collection-product' with product: products %}{%-endif-%}
-			</div>
-			{% break %}
-		{%- endif -%}
-{% endfor %}
+{%- if products.tags.size > 0 -%}
+	{%- for tag in products.tags  -%}
+			{%- if tag == 'New' or tag == 'Bestseller' or tag == 'most-popular' or tag == 'sale' -%}
+				<div class="product__labels">
+					<span class="product__label product__label--{{ tag | replace: " ", "-"}}">{{ tag }}</span>
+					{%- if template contains 'collection' -%}{% render 'wishlisthero-collection-product' with product: products %}{%-endif-%}
+				</div>
+				{% break %}
+			{%- endif -%}
+	{% endfor %}
+{%- else -%}
+	<div class="product__labels">
+		{%- if template contains 'collection' -%}{% render 'wishlisthero-collection-product' with product: products %}{%-endif-%}
+	</div>
+{%- endif -%}
