--- a/snippets/label-product-tag.liquid
+++ b/snippets/label-product-tag.liquid
@@ -6,6 +6,11 @@
 					{%- if template contains 'collection' -%}{% render 'wishlisthero-collection-product' with product: products %}{%-endif-%}
 				</div>
 				{% break %}
+			{%- else -%}
+				<div class="product__labels">
+					{%- if template contains 'collection' -%}{% render 'wishlisthero-collection-product' with product: products %}{%-endif-%}
+				</div>
+				{% break %}
 			{%- endif -%}
 	{% endfor %}
 {%- else -%}
