--- a/snippets/label-product-tag.liquid
+++ b/snippets/label-product-tag.liquid
@@ -7,12 +7,15 @@
 				</div>
 				{% break %}
 			{%- else -%}
-				<div class="product__labels">
-					{%- if template contains 'collection' -%}{% render 'wishlisthero-collection-product' with product: products %}{%-endif-%}
-				</div>
-				{% break %}
+				{% assign wishlist_label = true%}
 			{%- endif -%}
 	{% endfor %}
+	{%- if wishlist_labe -%}
+		<div class="product__labels">
+			{%- if template contains 'collection' -%}{% render 'wishlisthero-collection-product' with product: products %}{%-endif-%}
+		</div>
+		{% break %}
+	{%- endif -%}
 {%- else -%}
 	<div class="product__labels">
 		{%- if template contains 'collection' -%}{% render 'wishlisthero-collection-product' with product: products %}{%-endif-%}
