--- a/snippets/label-product-tag.liquid
+++ b/snippets/label-product-tag.liquid
@@ -5,9 +5,10 @@
 					<span class="product__label product__label--{{ tag | replace: " ", "-"}}">{{ tag }}</span>
 					{%- if template contains 'collection' -%}{% render 'wishlisthero-collection-product' with product: products %}{%-endif-%}
 				</div>
+				{%- assign wishlist_label = false -%}
 				{% break %}
 			{%- else -%}
-				{% assign wishlist_label = true%}
+				{%- assign wishlist_label = true -%}
 			{%- endif -%}
 	{% endfor %}
 	{%- if wishlist_label -%}
