--- a/sections/product-quezzle-template.liquid
+++ b/sections/product-quezzle-template.liquid
@@ -913,13 +913,13 @@
                   <div class="advantage-item-img" style="background-image: url({{'dvantage-item-4.png' | asset_url}});background-position: left;background-repeat: no-repeat;"></div>
                 </div>
               </div>
-    
+              {%- if  section.settings.enable_decorate_walls -%}
               <div class="banner-decorate-walls">
                 <div class="banner-decorate-walls_header">DECORATE THE WALLS OF YOUR HOME</div>
                 <div class="banner-decorate-walls_text">You can decorate the interior with puzzles and our special mounting system</div>
                 <div class="banner-decorate-walls_howitworks"><a id="annoncment-banner-link" href="#upsell-anoncment-popup" style="text-decoration: underline;font-weight: 600;font-size: 14px;color: #292929;" class="upsell-anoncment-popup">{{ 'custome_text.banner.see_how_it_works' | t }} -></a></div>
               </div>
-    
+              {%- endif  -%}
               <div class="product-single__description rte" itemprop="description">
                 {% for block in section.blocks %}
                   {% if block.type == 'icons-set-with-text' %}
@@ -1377,6 +1377,16 @@
                   "label": "Under the timer"
                 } 
               ] 
+            },
+            {
+              "type": "header",
+              "content": "Decorate Walls Banner"
+            },
+            {
+              "type": "checkbox",
+              "id": "enable_decorate_walls",
+              "label": "Enable banner Decorate Walls",
+              "default": true
             },
             {
               "type": "header",
