New product template

--- a/sections/product-quezzle-template.liquid
+++ b/sections/product-quezzle-template.liquid
@@ -1380,6 +1380,16 @@
             },
             {
               "type": "header",
+              "content": "Inspirational GIFT Banner"
+            },
+            {
+              "type": "checkbox",
+              "id": "enable_inspirational_gift_banner",
+              "label": "Enable banner Inspirational GIFT",
+              "default": true
+            },
+            {
+              "type": "header",
               "content": "Decorate Walls Banner"
             },
             {
