--- a/sections/product-quezzle-template.liquid
+++ b/sections/product-quezzle-template.liquid
@@ -1391,6 +1391,26 @@
             },
             {
               "type": "header",
+              "content": "INSPIRING STORIES"
+            },
+            {
+              "type": "checkbox",
+              "id": "enable_inspiring_stories",
+              "label": "Enable INSPIRING STORIES block",
+              "default": true
+            },
+            {
+              "type": "header",
+              "content": "Delivery date block"
+            },
+            {
+              "type": "checkbox",
+              "id": "enable_delivery_date",
+              "label": "Enable delivery date BLOCK",
+              "default": true
+            },
+            {
+              "type": "header",
               "content": "Decorate Walls Banner"
             },
             {
