New product template

--- a/sections/product-quezzle-template.liquid
+++ b/sections/product-quezzle-template.liquid
@@ -1482,6 +1482,12 @@
               "content":"Discount Info"
             },
             {
+              "type": "checkbox",
+              "id": "enable_discount_info",
+              "label": "Enable Discount Info block",
+              "default": false
+            },
+            {
               "type":"image_picker",
               "id":"pdp_image",
               "label":"Image"
