Hot error fixes

--- a/sections/go-cart.liquid
+++ b/sections/go-cart.liquid
@@ -889,7 +889,13 @@
     token=bfdc4f6f5babff
     token=ea639b54a40421
 {%endcomment%}
-        $.get("https://ipinfo.io/json?token=ea639b54a40421", function (response) { if (response.country != "US"){ $('.go-cart-drawer-progress-bar').hide();$('.custom-tax-new').hide();} });
+        $.get("https://ipinfo.io/json?token=bfdc4f6f5babff", function (response) {
+            if (response.code != 200) {
+                $.get("https://ipinfo.io/json?token=ea639b54a40421", function (response) {if (response.country != "US"){ $('.go-cart-drawer-progress-bar').hide();$('.custom-tax-new').hide();} });
+            } else {
+                if (response.country != "US"){ $('.go-cart-drawer-progress-bar').hide();$('.custom-tax-new').hide();} 
+            } 
+            });
 
         $('.upsell-button').on('click',function(e){    
         e.preventDefault();
