--- a/sections/go-cart.liquid
+++ b/sections/go-cart.liquid
@@ -891,7 +891,7 @@
 {%endcomment%}
         $.get("https://ipinfo.io/json?token=bfdc4f6f5babff", function (response) {
             console.log(response)
-            if (response.code != 200) {
+            if (!response) {
                 $.get("https://ipinfo.io/json?token=ea639b54a40421", function (response) {if (response.country != "US"){ $('.go-cart-drawer-progress-bar').hide();$('.custom-tax-new').hide();} });
             } else {
                 if (response.country != "US"){ $('.go-cart-drawer-progress-bar').hide();$('.custom-tax-new').hide();} 
