--- a/snippets/mobile-etc-button.liquid
+++ b/snippets/mobile-etc-button.liquid
@@ -1,4 +1,12 @@
 <style>
+    .custom-checkbox {
+        position: absolute;
+        opacity: 0;
+        border-radius: 50%;
+        width: 35px;
+        height: 35px;
+        cursor: pointer;
+    }
     .mobile-sticky-atc {
         display: none;
         position: fixed;
