New collection page

--- a/sections/list-collections-new-template.liquid
+++ b/sections/list-collections-new-template.liquid
@@ -380,7 +380,7 @@ img {
   max-width: 190px;
 }
 .collections-item__list {
-  padding: 30px 0 40px 18px;
+  padding-left: 18px;
 }
 .collections-item__list ul li {
   font-size: 12px;
