New collection page

--- a/sections/list-collections-new-template.liquid
+++ b/sections/list-collections-new-template.liquid
@@ -381,6 +381,7 @@ img {
 }
 .collections-item__list {
   padding-left: 18px;
+  padding-bottom: 10px;
 }
 .collections-item__list ul li {
   font-size: 12px;
