--- a/sections/list-collections-new-template.liquid
+++ b/sections/list-collections-new-template.liquid
@@ -363,7 +363,7 @@ img {
   cursor: pointer;
 }
 .collections-item__info {
-  padding: 30px 30px 40px 30px;
+  padding: 30px;
   flex: 0 1 50%;
 }
 .collections-item__title {
