New collection page

--- a/sections/list-collections-new-template.liquid
+++ b/sections/list-collections-new-template.liquid
@@ -282,6 +282,7 @@ img {
   margin-bottom: 30px;
   position: relative;
   cursor: pointer;
+  min-height: 340px;
 }
 .collections-item:hover .item-hover {
   opacity: 1;
