New collection page

--- a/sections/list-collections-new-template.liquid
+++ b/sections/list-collections-new-template.liquid
@@ -20,7 +20,7 @@
             </ul>
           </div>
           <div class="collections-item__bottom">
-              <span class="collections-item__num">{{collections['wooden-puzzles'].products_count}} ITMES</span>
+              <span class="collections-item__num">{{collections['wooden-puzzles'].products_count}} ITEMS</span>
               {% assign collectionMinPrice = collections['wooden-puzzles'].products | sort: 'price' %}
               <span class="collections-item__price">FROM {{collectionMinPrice[0].price_min | money}}</span>
           </div>
@@ -48,7 +48,7 @@
                     </ul>
                 </div>
                 <div class="collections-item__bottom">
-                    <span class="collections-item__num">{{collections['nature-puzzles'].products_count}} ITMES</span>
+                    <span class="collections-item__num">{{collections['nature-puzzles'].products_count}} ITEMS</span>
                     {% assign collectionMinPrice = collections['nature-puzzles'].products | sort: 'price' %}
                     <span class="collections-item__price">FROM {{collectionMinPrice[0].price_min | money}}</span>
                 </div>
@@ -76,7 +76,7 @@
                   </ul>
               </div>
               <div class="collections-item__bottom">
-                  <span class="collections-item__num">1 ITMES</span>
+                  <span class="collections-item__num">1 ITEMS</span>
                   <span class="collections-item__price">FROM $19.95</span>
               </div>
               <div class="item-button__mobile">
@@ -103,7 +103,7 @@
                 </ul>
             </div>
             <div class="collections-item__bottom">
-                <span class="collections-item__num">{{collections['world_map_puzzles'].products_count}} ITMES</span>
+                <span class="collections-item__num">{{collections['world_map_puzzles'].products_count}} ITEMS</span>
                 {% assign collectionMinPrice = collections['world_map_puzzles'].products | sort: 'price' %}
                 <span class="collections-item__price">FROM {{collectionMinPrice[0].price_min | money}}</span>
             </div>
@@ -131,7 +131,7 @@
               </ul>
           </div>
           <div class="collections-item__bottom">
-              <span class="collections-item__num">{{collections['balancing-puzzles'].products_count}} ITMES</span>
+              <span class="collections-item__num">{{collections['balancing-puzzles'].products_count}} ITEMS</span>
               {% assign collectionMinPrice = collections['balancing-puzzles'].products | sort: 'price' %}
               <span class="collections-item__price">FROM {{collectionMinPrice[0].price_min | money}}</span>
           </div>
@@ -159,7 +159,7 @@
               </ul>
           </div>
           <div class="collections-item__bottom">
-              <span class="collections-item__num">{{collections['gift-cards'].products_count}} ITMES</span>
+              <span class="collections-item__num">{{collections['gift-cards'].products_count}} ITEMS</span>
               {% assign collectionMinPrice = collections['gift-cards'].products | sort: 'price' %}
               <span class="collections-item__price">FROM {{collectionMinPrice[0].price_min | money}}</span>
           </div>
@@ -187,7 +187,7 @@
             </ul>
         </div>
         <div class="collections-item__bottom">
-            <span class="collections-item__num">{{collections['mandala-puzzles'].products_count}} ITMES</span>
+            <span class="collections-item__num">{{collections['mandala-puzzles'].products_count}} ITEMS</span>
             {% assign collectionMinPrice = collections['mandala-puzzles'].products | sort: 'price' %}
             <span class="collections-item__price">FROM {{collectionMinPrice[0].price_min | money}}</span>
         </div>
@@ -215,7 +215,7 @@
             </ul>
         </div>
         <div class="collections-item__bottom">
-            <span class="collections-item__num">{{collections['qbrix'].products_count}} ITMES</span>
+            <span class="collections-item__num">{{collections['qbrix'].products_count}} ITEMS</span>
             {% assign collectionMinPrice = collections['qbrix'].products | sort: 'price' %}
             <span class="collections-item__price">FROM {{collectionMinPrice[0].price_min | money}}</span>
         </div>
