New collection page

--- a/sections/list-collections-new-template.liquid
+++ b/sections/list-collections-new-template.liquid
@@ -24,7 +24,7 @@
               <span class="collections-item__price">FROM {{collectionMinPrice[0].price_min | money}}</span>
           </div>
           <div class="item-button__mobile">
-              <button>Choose puzzles</button>
+              <button>Go to directory</button>
           </div>
           </div>
           <div class="collections-item__img">
@@ -52,7 +52,7 @@
             <span class="collections-item__price">FROM {{collectionMinPrice[0].price_min | money}}</span>
         </div>
         <div class="item-button__mobile">
-            <button>Choose puzzles</button>
+            <button>Go to directory</button>
         </div>
         </div>
         <div class="collections-item__img">
@@ -80,7 +80,7 @@
             <span class="collections-item__price">FROM {{collectionMinPrice[0].price_min | money}}</span>
         </div>
         <div class="item-button__mobile">
-            <button>Choose puzzles</button>
+            <button>Go to directory</button>
         </div>
         </div>
         <div class="collections-item__img">
@@ -107,7 +107,7 @@
                   <span class="collections-item__price">FROM $19.95</span>
               </div>
               <div class="item-button__mobile">
-                  <button>Choose puzzles</button>
+                  <button>Go to directory</button>
               </div>
               </div>
               <div class="collections-item__img">
@@ -135,7 +135,7 @@
                 <span class="collections-item__price">FROM {{collectionMinPrice[0].price_min | money}}</span>
             </div>
             <div class="item-button__mobile">
-                <button>Choose puzzles</button>
+                <button>Go to directory</button>
             </div>
             </div>
             <div class="collections-item__img">
@@ -163,7 +163,7 @@
               <span class="collections-item__price">FROM {{collectionMinPrice[0].price_min | money}}</span>
           </div>
           <div class="item-button__mobile">
-              <button>Choose puzzles</button>
+              <button>Go to directory</button>
           </div>
           </div>
           <div class="collections-item__img">
@@ -191,7 +191,7 @@
               <span class="collections-item__price">FROM {{collectionMinPrice[0].price_min | money}}</span>
           </div>
           <div class="item-button__mobile">
-              <button>Choose puzzles</button>
+              <button>Go to directory</button>
           </div>
           </div>
           <div class="collections-item__img">
@@ -219,7 +219,7 @@
               <span class="collections-item__price">FROM {{collectionMinPrice[0].price_min | money}}</span>
           </div>
           <div class="item-button__mobile">
-              <button>Choose puzzles</button>
+              <button>Go to directory</button>
           </div>
           </div>
           <div class="collections-item__img">
