--- a/sections/collection-template.liquid
+++ b/sections/collection-template.liquid
@@ -51,20 +51,31 @@
   <header class="collection-header">
     {% if section.settings.show_collection_image and collection.image %}
     <div class="collection-hero">
-      {%- if section.settings.enable_video -%}
-      <video autoplay muted loop playsinline id="myVideo" style="object-fit: cover;width: 100vw;">
-        <source src="{{ section.settings.video_bg }}" type="video/mp4">
-      </video>
+      {%- if collection.handle contains 'balancing-puzzles'  -%}
+        <div class="collection-hero__image ratio-container lazyload js"
+              data-bgset="{% include 'bgset', image: collection.image %}"
+              data-sizes="auto"
+              data-parent-fit="cover"
+              style="background-image: url('{{ collection.image | img_url: '1600x' }});"></div>
+        <noscript>
+          <div class="collection-hero__image" style="background-image: url({{ collection.image | img_url: '2048x600', crop: 'top' }});"></div>
+        </noscript>
       {%- else -%}
-      <div class="collection-hero__image ratio-container lazyload js"
-            data-bgset="{% include 'bgset', image: collection.image %}"
-            data-sizes="auto"
-            data-parent-fit="cover"
-            style="background-image: url('{{ collection.image | img_url: '1600x' }});"></div>
-      <noscript>
-        <div class="collection-hero__image" style="background-image: url({{ collection.image | img_url: '2048x600', crop: 'top' }});"></div>
-      </noscript>
-    {% endif %}
+        {%- if section.settings.enable_video -%}
+        <video autoplay muted loop playsinline id="myVideo" style="object-fit: cover;width: 100vw;">
+          <source src="{{ section.settings.video_bg }}" type="video/mp4">
+        </video>
+        {%- else -%}
+        <div class="collection-hero__image ratio-container lazyload js"
+              data-bgset="{% include 'bgset', image: collection.image %}"
+              data-sizes="auto"
+              data-parent-fit="cover"
+              style="background-image: url('{{ collection.image | img_url: '1600x' }});"></div>
+        <noscript>
+          <div class="collection-hero__image" style="background-image: url({{ collection.image | img_url: '2048x600', crop: 'top' }});"></div>
+        </noscript>
+        {% endif %}
+      {% endif %}
       <div class="collection-hero__title-wrapper">
         <div class="over_image_content page-width medium-up--text-left">
           <h1 class="heading">
