--- a/sections/list-collections-new-template.liquid
+++ b/sections/list-collections-new-template.liquid
@@ -8,7 +8,7 @@
   
   <div class="collections__wrapper">
     <div class="collections__items">
-      <a class="collections-item" href="{{collections['wooden-puzzles'].url}}">
+      <a id="new-collection-list" class="collections-item" href="{{collections['wooden-puzzles'].url}}">
           <div class="collections-item__info">
           <span class="collections-item__title">Wooden Jigsaw Animals Puzzle</span>
           <p class="collections-item__text">Brighten up your life</p>
@@ -36,7 +36,7 @@
             </div>
           </div>
       </a>
-      <a class="collections-item" href="{{collections['nature-puzzles'].url}}">
+      <a id="new-collection-list" class="collections-item" href="{{collections['nature-puzzles'].url}}">
         <div class="collections-item__info">
         <span class="collections-item__title">Wooden Jigsaw Nature Puzzles</span>
         <p class="collections-item__text">Find Inspiration</p>
@@ -64,7 +64,7 @@
         </div>
         </div>
       </a>
-      <a class="collections-item" href="{{collections['mandala-puzzles'].url}}">
+      <a id="new-collection-list" class="collections-item" href="{{collections['mandala-puzzles'].url}}">
         <div class="collections-item__info">
         <span class="collections-item__title">Mandala Puzzles</span>
         <p class="collections-item__text">Your dreams can possibly come true</p>
@@ -92,7 +92,7 @@
         </div>
         </div>
       </a>
-      <a class="collections-item" href="/products/set-for-mounting-puzzles">
+      <a id="new-collection-list" class="collections-item" href="/products/set-for-mounting-puzzles">
               <div class="collections-item__info">
               <span class="collections-item__title">Set For Mounting Puzzles</span>
               <p class="collections-item__text">After solving the puzzle decorate your walls!</p>
@@ -119,7 +119,7 @@
               </div>
               </div>
           </a>
-          <a class="collections-item" href="{{collections['world_map_puzzles'].url}}">
+          <a id="new-collection-list" class="collections-item" href="{{collections['world_map_puzzles'].url}}">
             <div class="collections-item__info">
             <span class="collections-item__title">Wooden World Maps</span>
             <p class="collections-item__text">3D Map looks amazing</p>
@@ -147,7 +147,7 @@
             </div>
             </div>
         </a>
-        <a class="collections-item" href="{{collections['qbrix'].url}}">
+        <a id="new-collection-list" class="collections-item" href="{{collections['qbrix'].url}}">
           <div class="collections-item__info">
           <span class="collections-item__title">Qbrix</span>
           <p class="collections-item__text">Create a masterpiece</p>
@@ -175,7 +175,7 @@
           </div>
           </div>
         </a>
-        <a class="collections-item" href="{{collections['balancing-puzzles'].url}}">
+        <a id="new-collection-list" class="collections-item" href="{{collections['balancing-puzzles'].url}}">
           <div class="collections-item__info">
           <span class="collections-item__title">Balancing Puzzles</span>
           <p class="collections-item__text">Fun for both kids and adults</p>
@@ -203,7 +203,7 @@
           </div>
           </div>
       </a>
-        <a class="collections-item" href="{{collections['gift-cards'].url}}">
+        <a id="new-collection-list" class="collections-item" href="{{collections['gift-cards'].url}}">
           <div class="collections-item__info">
           <span class="collections-item__title">Gift Cards</span>
           <p class="collections-item__text">Delight your loved ones with a special Gift</p>
