--- a/sections/list-collections-new-template.liquid
+++ b/sections/list-collections-new-template.liquid
@@ -203,7 +203,7 @@
           </div>
           </div>
       </a>
-        <a id="new-collection-list" class="collections-item" href="{{collections['gift-cards'].url}}">
+        <a class="collections-item new-collection-list" href="{{collections['gift-cards'].url}}">
           <div class="collections-item__info">
           <span class="collections-item__title">Gift Cards</span>
           <p class="collections-item__text">Delight your loved ones with a special Gift</p>
